2007-05-29 1.1 alpha 1 Release

           o Fixed problem where when sql timing log was the only log turned on, log4jdbc would not recognize that
             logging was on at all.

           o report sql exceptions in the sql timing log as well (when they occured during sql execution) and
             prominently show that the sql FAILED, and display how long it tried to chug on the sql
             before the exception was thrown

           o Switch to Simple Logging Facade for Java SLF4J instead of using log4j directly, so that any underlying
             logging system can be easily used.

           o option added to ant build script to generate javadoc with ydoc to include UML diagrams within the javadoc.

           o dump batched sql correctly.

           o add simple command line program (PostLogProfilerProcessor) for processing sqltiming log files to create
             a simple profiling report from log data.

2007-04-21 Initial 1.0 Release