@@ -1,3 +1,13 @@
+
+             alpha 2 Release
+
+             initial JDBC 4.0 support
+             
+             fix Null pointer exception bug that could happen with setObject call on PreparedStatementSpy
+             
+             added mysql (com.mysql.jdbc.Driver) and postgresql (org.postgresql.Driver) 
+             to list of "well known" drivers that log4jdbc looks for at startup.
+
 2007-05-29 1.1 alpha 1 Release
 
            o Fixed problem where when sql timing log was the only log turned on, log4jdbc would not recognize that
